Make several changes to improve handling of C++ slightly; bump version to 3.6
This involves adding a few new keywords |constexpr|, |decltype|, |mutable|,
|noexcept|, |nullptr| into existing categories, and adding a rule for
range-based |for| loops.

--- a/inputs/cwebxmac.tex
+++ b/inputs/cwebxmac.tex
@@ -73,6 +73,7 @@
 \let\GG=\gg
 \let\LL=\ll
 \let\NULL=\odot
+\let\nullptr=\odot
 \mathchardef\AND="2026 % bitwise and; also \& (unary operator)
 \def\OR{\Penalty6\mid} % bitwise or
 \let\XOR=\oplus % bitwise exclusive or
